# python-flask-mysql-tutorials

./: .gitignore  README.md  pyproject.toml
main/: app.py  config.py  utils.py
main/models/: __init__.py  order.py  product.py  user.py
main/modules/: products.py  routes.py
main/routes/: products.py
main/usecases/: __init__.py  login.py  orders.py  products.py
